# rust_backend_template-main

./: .env  Cargo.toml  diesel.toml
migrations/2024-10-16-133337_create_users/: up.sql
migrations/2024-10-16-134648_new_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/controllers/: users_controller.rs
src/models/: app_state.rs  error.rs  messages.rs  mod.rs  user.rs
src/repositories/: users_repository.rs
src/services/: users_service.rs
