[package]
name = "linuxiarnia"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"]}
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
chrono = {version = "0.4.38", features = ["serde"]}
[build]
rustflags = ["-L", "C:\\Program Files\\PostgreSQL\\17\\lib"]
